--- a/trunk/Quigley/Quigley/index.html
+++ b/trunk/Quigley/Quigley/index.html
@@ -49,7 +49,8 @@
                             $("#saveTabButton"), // save button
                             $("#removeTabButton"), // remove button
                             $("#currentTabs"), // tabs
-                            $("#log") // infoDisplay                            
+                            $("#log"), // infoDisplay
+                            localStorage // use local storage
             );
 
         });
